cabal-version:      3.0
name:               coexponential-renshu
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             nmjr-311

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common shared-properties
  build-depends:    base ^>=4.14.3.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -Wcompat

library
  import:          shared-properties
  exposed-modules: MyLib
  hs-source-dirs:  src

executable coexponential-renshu
  import:         shared-properties
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:  coexponential-renshu
  hs-source-dirs: app
